@@ -1,5 +1,7 @@
 AUX kopete-antispam-0.4-fixlink.patch 1804 RMD160 2cef87b6424fd107ec57486514aa9e86903cc615 SHA1 a3085a57b9e6f2c3cc4e10c2c27d7149a459d7ff SHA256 a608263284e558b9e43fa04972e1eb0cbde66a7d865cb5c7896b507e7d22bb7f
 DIST kopete-antispam-kde4-0.4.tar.gz 5808 RMD160 8eb8ca67753b76397fdd572b2c45ede225bacc45 SHA1 37cbb781a20b1bb5b7b948027bab9defb82d73f8 SHA256 e9adcb65077d52d1e2da55141b62c8128f846204d42b7744dfbf9af3f954be2f
-EBUILD kopete-antispam-0.4.ebuild 799 RMD160 c4db673f3d69556f8456fb73650a4f29300f49f2 SHA1 303f8b776f20381dd04441e6d052fc009c3936ac SHA256 d10c6dc4fb74b9b7beed60df2f6342047c7676cda21881977ce28c66af0a4653
-MISC ChangeLog 553 RMD160 abaf71d59bc3d99da52617b0ebb7618b4d672161 SHA1 df4900351a8866f50f5ece04007b9c9a2cf40b2f SHA256 44f33724c98aee0958db21b79d5f37f3d7fc45e436683315058c9615d20778e3
+DIST kopete-antispam-kde4-0.5.tar.gz 6737 RMD160 2590236ac51575942b3b6efc6fdc9e1a6b32696f SHA1 8db46b5b4a50c2495f6d6c1efa99c25fe85752dc SHA256 8edce4deee8a2ceb54c8a04a70418100deaf1a0d80a19fd2ad3aeeb506f3d452
+EBUILD kopete-antispam-0.4.ebuild 821 RMD160 31c608f29f05132bf2cdfa522bc146f58160ce05 SHA1 74e354078cff1490489832ce820d6862556540de SHA256 3e36a0ca667dd45b23da16b5259a81046536321f5ec63a132f254ffa519e1066
+EBUILD kopete-antispam-0.5.ebuild 757 RMD160 2ba3338ecae4b2ec0833109a79199c3f18ebad2f SHA1 40cb3e182b9204425468589a925c37b693008f86 SHA256 0b52cb229cfd4b35073abaf3880526c8bc2329824a7fd935df5d66e1308de866
+MISC ChangeLog 739 RMD160 5adf8921a0252ddf01ae912163d95820f9c4c0b7 SHA1 b610210cbf41d95d109cf6b6da0a7c52126665df SHA256 8f673b72b977885012b31bcde0e5f979b247e8f6a94f5838f9145d4aedd4eb91
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
