@@ -1,9 +1,8 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kopete-antispam/kopete-antispam-0.4.ebuild,v 1.3 2009/03/27 21:57:10 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kopete-antispam/kopete-antispam-0.5.ebuild,v 1.1 2009/03/27 21:57:10 hwoarang Exp $
 
 EAPI="2"
-KDE_MINIMAL="4.1"
 
 inherit kde4-base
 
@@ -23,8 +22,6 @@ DEPEND=">=kde-base/kopete-${KDE_MINIMAL}"
 RDEPEND="${DEPEND}"
 
 S="${WORKDIR}/${MY_P}"
-
-PATCHES=( "${FILESDIR}/${P}-fixlink.patch" )
 
 pkg_postinst() {
 	elog "You can now enable and set up the Antispam plugin in Kopete."
