@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/kopete-antispam
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kopete-antispam/ChangeLog,v 1.2 2009/02/03 10:18:42 alexxy Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kopete-antispam/ChangeLog,v 1.3 2009/03/27 21:57:10 hwoarang Exp $
+
+*kopete-antispam-0.5 (27 Mar 2009)
+
+  27 Mar 2009; Markos Chandras <hwoarang@gentoo.org> kopete-antispam-0.4,
+  +kopete-antispam-0.5.ebuild:
+  Version bump, minor clean up on ebuilds
 
   03 Feb 2009; Alexey Shvetsov <alexxy@gentoo.org>
   +files/kopete-antispam-0.4-fixlink.patch, kopete-antispam-0.4.ebuild:
